--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
     </nav>
     <div id="top-title-img-container">
         <div class="container">
-            <h1 id="title-txt">How To Get Rid Of Fungus Gnats</h1>
-            <img class="main-img" src="./imgs/fungusgnats/pexels-ameruverse-digital-marketing-media-1643402.jpg"  alt="main-img">
+            <div class="top-title-img-container-inner">
+                <h1 id="title-txt">How To Get Rid Of Fungus Gnats</h1>
+                <img class="main-img" src="./imgs/fungusgnats/pexels-ameruverse-digital-marketing-media-1643402.jpg"  alt="main-img">
+            </div>
+        
         </div>
     </div>
     <main>
@@ -125,6 +128,21 @@
             <li>soil</li>
         </ol>
     </main>
+    <section class="article-links-bottom-container">
+        <h4 class="article-heading-bottom">More Articles</h4>
+
+        <div class="links-container-bottom">
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+            <div class="box-bottom"></div>
+        </div>
+    </section>
    <footer>
 
    </footer>
