--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
             <ul nav-ul>
                 <li><a href="home">Home</a></li>
                 <div class="r-g-container">
-                <li><a href="guides">Guides</a></li>
-                    <ul class="r-g-dropdown">
-                    <li><a href="removal guides">Fungus gnats</a></li>
-
-                    </ul>
+                    <li><a href="guides">Guides</a></li>
+                        <ul class="rm-dd">
+                              <a href="removal guides">Fungus gnats</a>
+                              <a href="removal guides">Fungus gnats</a>
+                              <a href="removal guides">Fungus gnats</a>
+                        </ul>
                 </div>
                 <li><a href="about">About</a></li>
                 <li><a href="contact">Contact</a></li>
